--- a/src/app/matricula/pagos/pagos.component.html
+++ b/src/app/matricula/pagos/pagos.component.html
@@ -1,1 +1,32 @@
-<p>pagos works!</p>
+<div class="container">
+  <h2>Formulario de Pago</h2>
+
+  <form class="form-control" validate>
+    <div class="form-group">
+      <label for="numeroTarjeta">Número de Tarjeta</label>
+      <input type="text" id="numeroTarjeta" class="form-control" name="numeroTarjeta" ngModel required>
+    </div>
+
+    <div class="form-group">
+      <label for="nombre">Nombre en la Tarjeta</label>
+      <input type="text" id="nombre" class="form-control" name="nombre" ngModel required>
+    </div>
+
+    <div class="form-group">
+      <label for="fechaVencimiento">Fecha de Vencimiento</label>
+      <input type="text" id="fechaVencimiento" class="form-control" name="fechaVencimiento" ngModel required>
+    </div>
+
+    <div class="form-group">
+      <label for="ccv">CCV</label>
+      <input type="text" id="ccv" class="form-control" name="ccv" ngModel required>
+    </div>
+
+    <div class="form-group">
+      <label for="correo">Correo Electrónico</label>
+      <input type="email" id="correo" class="form-control" name="correo" ngModel required>
+    </div>
+
+    <button type="button" class="btn btn-primary">Realizar Pago</button>
+  </form>
+</div>
